# ablaze_vfx

./: Cargo.toml
assets/: FX_SM_PolarCoordinate_FlatHemisphere.gltf  FX_SM_VolumetricLight_Cone.gltf  FX_SM_Water_Disc.gltf  main.blend
assets/shaders/: custom_material.wgsl  fresnel.wgsl  polar_coordinates.wgsl  uv_distortion.wgsl  volumetric_fog.wgsl  water.wgsl
src/: fresnel.rs  main.rs  particles.rs  polar_coordinates.rs  uv_distortion.rs  volumetric_fog.rs  water.rs
src/particles/: components.rs
